# Ald

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
src/: _square.cpp  main.cpp  window.cpp
